Add correct types
